// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript/enum/1tbs > ambient enum 1`] = `
"declare enum Direction {
  Up = "UP",
  Down = "DOWN",
  Left = "LEFT",
  Right = "RIGHT",
}
"
`;

exports[`typescript/enum/1tbs > computed and constant members 1`] = `
"enum FileAccess {
  // constant members
  None,
  Read = 1 << 1,
  Write = 1 << 2,
  ReadWrite = Read | Write,
  // computed member
  G = "123".length,
}
"
`;

exports[`typescript/enum/1tbs > const enum 1`] = `
"const enum Enum {
  A = 1,
  B = A * 2,
}
"
`;

exports[`typescript/enum/1tbs > empty enum 1`] = `
"enum Foo {}
"
`;

exports[`typescript/enum/1tbs > heterogeneous enum 1`] = `
"enum BooleanLikeHeterogeneousEnum {
  No = 0,
  Yes = "YES",
}
"
`;

exports[`typescript/enum/1tbs > numeric enum 1`] = `
"enum Direction {
  Up = 1,
  Down,
  Left,
  Right,
}
"
`;

exports[`typescript/enum/1tbs > string enum 1`] = `
"enum Direction {
  Up = "UP",
  Down = "DOWN",
  Left = "LEFT",
  Right = "RIGHT",
}
"
`;
